# typosaurus

./: Cargo.toml  LICENSE  README.md
src/: bool.rs  cmp.rs  dinosaurs.rs  lib.rs  num.rs
src/collections/: array.rs  graph.rs  list.rs  maybe.rs  mod.rs  record.rs  set.rs  tuple.rs  value_list.rs
src/traits/: applicative.rs  fold.rs  functor.rs  mod.rs  monad.rs  monoid.rs  semigroup.rs
